# NBA_Win_Predictor

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  vcpkg.json
.github/workflows/: deploy.yml
backend/src/: main.cpp  nba_client.cpp  nba_client.h  probability.cpp  probability.h  server.cpp  server.h
backend_py/: collect_data.py  requirements.txt  server.py  train.py
backend_py/data/: model.pkl  stats_snapshot.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  teamColors.js  utils.js
frontend/src/components/: GameCard.jsx  GameList.jsx  GameSwitcher.jsx  HeroGame.jsx  ProbabilityBar.jsx  RecentGameCard.jsx  StandingsView.jsx  StatsStrip.jsx  StatsView.jsx  WPChart.jsx
